# AutoDash.Lighting

./: .gitmodules  CMakeLists.txt  README.md  build.sh
files/: index.css  index.html  index.js
include/: LightingFrame.hpp  LightingModule.hpp
include/webserver/: Utils.hpp  WebServer.hpp
include/webserver/resource/: Index.hpp  Solid.hpp
resources/: Lighting_resources.qrc
source/: LightingFrame.cpp  LightingModule.cpp
source/webserver/: Utils.cpp  WebServer.cpp
source/webserver/resource/: Index.cpp  Solid.cpp
